# KoboAnnotations

./: .gitignore  LICENSE.md  README.md  pyproject.toml  style.css
src/KoboAnnotations/: KoboAnnotations.py  template.html
